Moved Vue components to serperate folder

--- a/frontend/vue/index.html
+++ b/frontend/vue/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/materialize.min.css">
   <script src="js/materialize.min.js"></script>
   <script src="js/vue.js"></script>
+  <script src="https://unpkg.com/http-vue-loader"></script>
   <script src="js/index.js"></script>
 
   <title>Vue frontend</title>
